@@ -1,6 +1,6 @@
 DEFINED_PHASES=compile install postinst postrm preinst setup test unpack
 DEPEND=>=sys-devel/gcc-4.6.0 !build? ( sys-apps/sed >=sys-devel/binutils-2.11.90.0.31 )
-DESCRIPTION=Linux-Mips GIT sources for MIPS-based machines, dated 20150118
+DESCRIPTION=Linux-Mips GIT sources for MIPS-based machines, dated 20150130
 EAPI=5
 HOMEPAGE=http://www.linux-mips.org/ http://www.gentoo.org/
 IUSE=cobalt ip27 ip28 ip30 ip32r10k symlink build
@@ -9,7 +9,7 @@ LICENSE=GPL-2 freedist
 PDEPEND=!build? ( virtual/dev-manager )
 RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
 RESTRICT=binchecks strip
-SLOT=3.18.3
-SRC_URI=mirror://kernel/linux/kernel/v3.x/patch-3.18.3.xz mirror://kernel/linux/kernel/v3.x/linux-3.18.tar.xz mirror://gentoo/mipsgit-3.18.0-20150118.diff.xz mirror://gentoo/mips-sources-3.18.0-patches-v1.tar.xz
+SLOT=3.18.5
+SRC_URI=mirror://kernel/linux/kernel/v3.x/patch-3.18.5.xz mirror://kernel/linux/kernel/v3.x/linux-3.18.tar.xz mirror://gentoo/mipsgit-3.18.0-20150130.diff.xz mirror://gentoo/mips-sources-3.18.0-patches-v2.tar.xz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	kernel-2	e0363401e3e385deca89bb9a22b528bb	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f3609010a424198ca7a60df1db0c51de
+_md5_=ed8362b709e0e1b574e4491b95caf4ff
