@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX eblits/err_disabled_mach-v1.eblit 1639 SHA256 e0b1404a5e3df2be0af528455eeaa801381b02ad0860bc72e02a9e88eee90370 SHA512 c34097c172a9d37e7dde2a1266464cef5370058fca4a662694db34e26c3aa3dc49f00115af50c036bb30e1e808ee5efe84c300e716f8595788617073d58e2f00 WHIRLPOOL 9b291a6561e6e503eae11cdf7fd216373a12ebdb24f03ca0a97e6c19b471d927aa004359f6d74fbcdb88564a697002c2e1d7ef5a7f08dfd6cc5fb441262943f6
 AUX eblits/err_only_one_mach_allowed-v1.eblit 762 SHA256 c7ae9d34966434a8969abcf076f88bec15fc8cf12c656320b7fb65814dfaa315 SHA512 8f06cc9b2b3e8843b150b2ba7e9ca6413386a81a3c81563d356072db39492d8fe17b90a034dc3b53029be809904d3391b68a74a6b13d4c3345220933e6c5ee68 WHIRLPOOL bdd54b92ecdd0c5108243d654dbbe868ff4a233ab9282ea3c85d20e738315b969ccf55611bd0b8f6f799c4b98c949c9c8befcf367f715322fd1d1fbdcf2d52db
 AUX eblits/pkg_postinst-v1.eblit 653 SHA256 e57c88960d6f8e145db5629ad37663281f9ed1b19eaa77f7649464bca58ff005 SHA512 3ec5ad1854f49e0d290c3c2bfefdf1fff2cbd2c22b6ca69895f3b765301039b897c062a69656c86029b9002b5edb941b80f38124718a56d64c660141a505fb9b WHIRLPOOL ed0345082c24eb1ba432e434345fc36d886aa078183ff12cbd0ee0f1bd11e38f12cc4e6a8adc4765a4f4edf003ab255d8377803d0806f3054466f3778f9dcb6d
@@ -10,9 +13,26 @@ AUX eblits/show_ip30_info-v3.eblit 3370 SHA256 b26c3e587c9061ac68fe915b7717a968d
 AUX eblits/show_ip32_info-v3.eblit 2090 SHA256 68e8688631570bdf23015057779866d5de124cf17fa50e5e2f9ce4926abb9da0 SHA512 e0e505bc323b5593f9a128fc06bd33be0e4b72aa8b0a694703efa840ece18a2a81108bcb6b5365472e3368151ac9086e411496c9568033c22189ed79657e6dc2 WHIRLPOOL e36910747ba1e01f7b10b97cfbc9c9c10bd431e700c0c6349e099319cb09d1f8cedfc6c2d878b0cfc328d869016825322a22a85ae30f15b055012722f1c9b17a
 AUX eblits/src_unpack-v4.eblit 2333 SHA256 c4e7e18e0f5c9ba811d56a0ac70e51ff5aa6a843c1b6581e41d6092120675253 SHA512 ce6e39083080405a86f96bdcbc640a3b022f4eb96040503ee928e3a75ded2b80bb1868c3ee949a42ebd373a273fe33f30b3f33a8635f51ebd36744707c7d08e1 WHIRLPOOL b7df5b21a0b65b493b8bd09cc306450a063772bdaf8001caee9d1ad52584072647468cafa77ebd0ba7aad8d7b773446420a3ac76250accbc91824f50698fbb1b
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
-DIST mips-sources-3.18.0-patches-v1.tar.xz 103504 SHA256 085b6c1807643c9a99e2ad2e4f0feee4ac76dca6460572faa5c0c63427472bf6 SHA512 939db95dba305e77d8e3344a0784fe676713e1cb3be85b9564a57f24abdfeb6b6d32cf17f236ee2e6b710a965ff4c3b8c6582a2b07f4df328301049bc3312e99 WHIRLPOOL ed8857c20db32f34bb750084c92f23e8ab60f57de73e6e1617bef2d4b3d9a1b8c14a817a2c80caae6f7e1ba31cd0df97f6bced6ea15f88ce7d4101fb5e8a3d16
-DIST mipsgit-3.18.0-20150118.diff.xz 1656 SHA256 9b45ad6abe83089e8823ab883fe81145167be8b0e62558621e3b56e5562cc667 SHA512 7c6702ce7cb72d947973499df21a3a72584081681adcf1c7effe72f2065beebb51ce44ae78967e4bc76e770cd1ad27092a69f601658578e41dd4f772b5a69548 WHIRLPOOL b87ba7bc5148b858901fcc2db0327f68a272ccef9d3cb0a5a00de5cd692c66fc696434d845e0f183dbc3ee8f978ca61d9dc2e6fd09c69bd786c5cced7ca84d64
-DIST patch-3.18.3.xz 80880 SHA256 564eed0dfd7aadeec97566da6d09f8636b6335882139cf6d42e45381276bb2d0 SHA512 e7c683e4bcd984df927eabe61352dbf9d0fa4906ce95561374914693259c2ac741a58bd14d6e89acd57969de57f4036e38c029c2d5be14d6bd875057f8b02cab WHIRLPOOL d389358f14497fe2abde5fd6dc4ddd95d1109f18b6977336224fc35eae2b8e3f17185e321da7444a217f3da91d6d4e1a551f480f8c9de8bcaf0ab77be0312910
-EBUILD mips-sources-3.18.3.ebuild 5194 SHA256 3d2d85e8018ce232a9dad06c2a4df5a76f5ba7abb8ffb13abefa6a0e6ee4bc95 SHA512 e64f153229e6c38eba222d7aa442b5093c2fe05c4a79e75e92db0d39ee57adf3820fa351923883fb426ef6b91b97ba5e899a238e381693b3ee770df60bb9112b WHIRLPOOL 1427c0cbb2da12e0cc6a05c531fccc3bedf2c00a8b88396eab184eb1d57c41398d86df5ad2b77d611f7eba5f9ee3f600a39bd9853fa68e4d9e6ec83f123a5f4f
-MISC ChangeLog 58817 SHA256 41057b52fd2e7cdb40ffb21f5be941c302bf0b296bbf0e1b71b242e64e4aec07 SHA512 189ab4669592d051b33321ae55274e2f67b0496f1c9407de1026829439bde9cdbfa5b4ecc4e4627f60929c5b6a9196e3d6af900be3705a7be6111a39351bc763 WHIRLPOOL e70a9667744c1ffc3302aeaf29c9edfa7bda20e169553b929988aaceeccc412f9d48d191b35d2ab1eeab457b38778967f009494b9941c1249a096f0f025dc673
+DIST mips-sources-3.18.0-patches-v2.tar.xz 104112 SHA256 08d770af5d798cbb8eef001cc0564521514ad38c94fb773ac94b9b60888880a5 SHA512 006b4d901e687aca6d83464f6da0767311f64eabc3e136115cdee25e9fe4bab8f578102d4f3db48eab370a5754e2a4e9fb4a4252086f1dd7d02ff1356d23335e WHIRLPOOL 14321ae7cb8b151753f897d97bcff185626b2b10711edac3240caf8295b269761092bfda2b87e580d650768a0bdd4bca50b7ac9f6f6836fd6d9c2269ce3f7f83
+DIST mipsgit-3.18.0-20150130.diff.xz 1656 SHA256 6ada0dbdbc2bc7ef18f7eb21f4a5e1b9e8c9e8efb491d3000ca4d02e89d3f72e SHA512 eea02caf597cd75f897bf5cc858b3c1af20aa3ebe858d5087d831576422bfd93d559effe16eadccb8f8ca19e70513615af17ad1b84597b0b5a82f952dd4e2939 WHIRLPOOL 77309f1a79e4470f81b1068220c9b844d3a13d6756dd074de3260734443b866dee3e581a2ca5416aa6a77e583473f76159202f1925a1f4c0fd332f58053684a9
+DIST patch-3.18.5.xz 165412 SHA256 9e261632e11f629705c3f1b2f07c611284e5f9972c42f6740131e8e2471c349a SHA512 273b5e4917bcd8520d8c81869f41572275a181ae4cb2c3d7309507d47da29903eb2104703e4402f07f6c20477665a82ef57d8a1c34e19ecc10b0e1a4c0f8fd14 WHIRLPOOL 28cc9043c47c945e7e64cd703a3c9c66edb29f179822156875fbe6036b2119f05e9922a2249bf530f1bd7a2f992d324b34a0c7d04bea0e2e655a24bf57485ca6
+EBUILD mips-sources-3.18.5.ebuild 5194 SHA256 03c48be4013de9282bbe61ccb374db033b7c1f30e4865f9427d58420bdf378b8 SHA512 7a9bdc537c6a3c69cf6bc6009a31f1a369261e09489e3bceeeaf4ec64a4850b01bfdf583170043d356db9f0090532c30f950a7718d2bf85094c96010239ce22e WHIRLPOOL a4c2cfd12552b442e43aa77f7ab78e64ca0eec5654e15860f4c9f3282250d4c3401067eae968b4b6fe1fbd206a6f828e077d67c466c35f6e2e09f297e2f73c82
+MISC ChangeLog 59066 SHA256 a83be534fcf785c10b1c128611dc783ff6433522ffe646129e86b4777e43cfdc SHA512 8be58f351b6a02ecdd7fae8ae31dcd37ffed4fa6a1a8c84e3fc35b5582ca236fe5e2a5d9ab0416cdf3519cde52b9d98b3567f8ded739d127969d4e477603080e WHIRLPOOL de2356352c09edb5d33458fa7028e2977c80923d6355e1d64e2b72fdf122ea92bca58a1e86f61a6e5d298fec15b43dd8ec758a67ab13861219e2423cff943e43
 MISC metadata.xml 897 SHA256 ad16bda2973a447cff00b44bf39e1add41728ee191f4745acb0a773b52bf83f7 SHA512 84baae83abe8f6885bcbf52a0ea8faf3f926a86af570050a92bddd31fa4c608e7fa81413f3f14f818772273324e1ee561c32bdd75322dd898c143f5976bbaffe WHIRLPOOL ecf94d31b13306a39dacfeadb1866d1a0951e41a8e5467fb55cf58e1f7df1863973ccabfb58a226d6681f81f7ef1c4843de6d31ac42e9aa5c54d44bc2ce866db
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUzeAOAAoJENsjoH7SXZXjc3oP/0wuAq9rI+dSUceKUcj9zGCe
+r3JATzDnLDkbjQszFTqgT+noy3HntNAOBkCdyHpV6UbJ6efsJrrelSK7TOXcFc7w
+OTRKSIchOngOQIDEUtFHcx7FDr7Ji1ntBXHfnM+GKNbAwogGKxkVrV10xb6WZQm9
+PfN5W5mVWahl1AHxlkp3pfkO70V9pZjQKR3H+zbzm6dSjGoPll53YZ0Ey4/owUpN
+aACzhYt7zLvf/RdT9q3Qour36EI5Gwxxhr73ga3xKToJa2YPCUKrfSDnF9KAH62j
+xBbfc78N408MtrejcYX3SmXX4TGbrj/F50yEIgNDs5KdvNpp+SfT801jL2FeUy5D
+c1rY7oXC95eFnbI7zbjgOsRThWPJpA2wYQJrGQWlXLS0C6NqxsZEJ47L1cQbDzNM
+FYk8Ua8paMPgXvflbSLPkDlmyDWqCdb//oLzCQ25e6EPz4D2+2s8l+CKUVhEZ7OK
+ChXJjEKME5bXZeM77Aekr1tBUWoDu8O9iUrDsnK0COIs2Rj9mhfLeaPMKzfybSGD
+ue8gsqJyMkf6Tv8HRuHeqFqxP7RUM+2pF8uuNqfSmnE1sKGKEqzjlJJ6awo+iDhx
+WBHc7VPEtofuW8a//4hR6N+REMUxaaPRP/8QTYKDV+NpAicT1xDUvIA7uXz2Y7nP
+bzwJrVwDogHgqhhaW8IG
+=LKu5
+-----END PGP SIGNATURE-----
