@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/mips-sources
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mips-sources/ChangeLog,v 1.153 2015/01/21 02:31:16 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mips-sources/ChangeLog,v 1.154 2015/02/01 08:12:56 kumba Exp $
+
+*mips-sources-3.18.5 (01 Feb 2015)
+
+  01 Feb 2015; Joshua Kinard <kumba@gentoo.org> +mips-sources-3.18.5.ebuild,
+  -mips-sources-3.18.3.ebuild:
+  Update to 3.18.5, fix compile failure in IP27 RTC platform driver, update to
+  linux-mips-git 20150130.
 
   21 Jan 2015; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Remove unneded useflag description from metadata.xml
